# lunar

./: .gitignore  AUTHORS  ChangeLog.gio-migration  FAQ  HACKING  INSTALL  Makefile.am  NEWS  README.md  THANKS  acinclude.m4  autogen.sh  com.expidus.FileManager.service.in  com.expidus.Lunar.FileManager1.service.in  com.expidus.Thunar.service.in  com.expidus.lunar.appdata.xml.in  com.expidus.lunar.policy.in.in  configure.ac.in  lunar-bulk-rename.desktop.in.in  lunar.desktop.in.in  lunar.service.in
docs/: Makefile.am  README.gtkrc  Thunar.xml
docs/design/: mime.xmi  overview.xmi
docs/papers/: Makefile.am
docs/reference/: Makefile.am
docs/reference/lunarx/: Makefile.am  lunarx-docs.xml  lunarx-sections.txt  lunarx.types
examples/: Makefile.am  expidus-file-manager.py  lunar-file-manager.py  nautilus-bulk-rename.py
examples/tex-open-terminal/: Makefile.am  README.md  tex-open-terminal-plugin.c  tex-open-terminal.c  tex-open-terminal.h
icons/128x128/: Makefile.am
icons/16x16/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
lunar/: Makefile.am  lunar-abstract-dialog.c  lunar-abstract-dialog.h  lunar-abstract-icon-view.c  lunar-abstract-icon-view.h  lunar-application.c  lunar-application.h  lunar-browser.c  lunar-browser.h  lunar-chooser-button.c  lunar-chooser-button.h  lunar-chooser-dialog.c  lunar-chooser-dialog.h  lunar-chooser-model.c  lunar-chooser-model.h  lunar-clipboard-manager.c  lunar-clipboard-manager.h  lunar-column-editor.c  lunar-column-editor.h  lunar-column-model.c  lunar-column-model.h  lunar-compact-view.c  lunar-compact-view.h  lunar-component.c  lunar-component.h  lunar-dbus-freedesktop-interfaces.xml  lunar-dbus-service-infos.xml  lunar-dbus-service.c  lunar-dbus-service.h  lunar-deep-count-job.c  lunar-deep-count-job.h  lunar-details-view.c  lunar-details-view.h  lunar-device-monitor.c  lunar-device-monitor.h  lunar-device.c  lunar-device.h  lunar-dialogs.c  lunar-dialogs.h  lunar-dnd.c  (+128 more)
lunarx/: Makefile.am  abicheck.sh  lunarx-3.pc.in  lunarx-config.c  lunarx-config.h.in  lunarx-file-info.c  lunarx-file-info.h  lunarx-menu-item.c  lunarx-menu-item.h  lunarx-menu-provider.c  lunarx-menu-provider.h  lunarx-menu.c  lunarx-menu.h  lunarx-preferences-provider.c  lunarx-preferences-provider.h  lunarx-private.c  lunarx-private.h  lunarx-property-page-provider.c  lunarx-property-page-provider.h  lunarx-property-page.c  lunarx-property-page.h  lunarx-provider-factory.c  lunarx-provider-factory.h  lunarx-provider-module.c  lunarx-provider-module.h  lunarx-provider-plugin.c  lunarx-provider-plugin.h  lunarx-renamer-provider.c  lunarx-renamer-provider.h  lunarx-renamer.c  lunarx-renamer.h  lunarx.h  lunarx.symbols
plugins/: Makefile.am
plugins/lunar-apr/: Makefile.am  README.md  lunar-apr-abstract-page.c  lunar-apr-abstract-page.h  lunar-apr-desktop-page.c  lunar-apr-desktop-page.h  lunar-apr-image-page.c  lunar-apr-image-page.h  lunar-apr-plugin.c  lunar-apr-private.c  lunar-apr-private.h  lunar-apr-provider.c  lunar-apr-provider.h
plugins/lunar-sbr/: Makefile.am  README.md  lunar-sbr-case-renamer.c  lunar-sbr-case-renamer.h  lunar-sbr-date-renamer.c  lunar-sbr-date-renamer.h  lunar-sbr-enum-types.c  lunar-sbr-enum-types.h  lunar-sbr-insert-renamer.c  lunar-sbr-insert-renamer.h  lunar-sbr-number-renamer.c  lunar-sbr-number-renamer.h  lunar-sbr-plugin.c  lunar-sbr-provider.c  lunar-sbr-provider.h  lunar-sbr-remove-renamer.c  lunar-sbr-remove-renamer.h  lunar-sbr-replace-renamer.c  lunar-sbr-replace-renamer.h
plugins/lunar-sendto-email/: Makefile.am  README.md  lunar-sendto-email.desktop.in.in  main.c
plugins/lunar-tpa/: Makefile.am  README.md  lunar-tpa.c
plugins/lunar-uca/: Makefile.am  README.md  lunar-uca-chooser.c  lunar-uca-chooser.h  lunar-uca-chooser.ui  lunar-uca-context.c  lunar-uca-context.h  lunar-uca-editor.c  lunar-uca-editor.h  lunar-uca-editor.ui  lunar-uca-model.c  lunar-uca-model.h  lunar-uca-plugin.c  lunar-uca-private.c  lunar-uca-private.h  lunar-uca-provider.c  lunar-uca-provider.h  lunar-uca.gresource.xml  uca.xml.in
plugins/lunar-wallpaper/: Makefile.am  README.md  lunar-wallpaper-plugin.c  twp-provider.c  twp-provider.h
po/: POTFILES.in  POTFILES.skip  am.po  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lt.po  lv.po  ms.po  nb.po  (+26 more)
