AM_CPPFLAGS =								\
	-I$(top_srcdir)							\
	-DG_LOG_DOMAIN=\"lunarx\"					\
	-DLUNARX_COMPILATION						\
	-DLUNARX_DIRECTORY=\"$(libdir)/lunarx-$(LUNARX_VERSION_API)\"	\
	$(PLATFORM_CPPFLAGS)

liblunarx_headers =							\
	lunarx.h							\
	lunarx-config.h						\
	lunarx-file-info.h						\
	lunarx-menu.h							\
	lunarx-menu-item.h						\
	lunarx-menu-provider.h						\
	lunarx-preferences-provider.h					\
	lunarx-property-page.h						\
	lunarx-property-page-provider.h				\
	lunarx-provider-factory.h					\
	lunarx-provider-module.h					\
	lunarx-provider-plugin.h					\
	lunarx-renamer.h						\
	lunarx-renamer-provider.h

liblunarx_includedir =							\
	$(includedir)/lunarx-$(LUNARX_VERSION_API)/lunarx

liblunarx_include_HEADERS =						\
	$(liblunarx_headers)

lib_LTLIBRARIES =							\
	liblunarx-3.la

liblunarx_3_la_SOURCES =						\
	$(liblunarx_headers)						\
	lunarx-config.c						\
	lunarx-file-info.c						\
	lunarx-menu.c							\
	lunarx-menu-item.c						\
	lunarx-menu-provider.c						\
	lunarx-preferences-provider.c					\
	lunarx-private.c						\
	lunarx-private.h						\
	lunarx-property-page.c						\
	lunarx-property-page-provider.c				\
	lunarx-provider-factory.c					\
	lunarx-provider-module.c					\
	lunarx-provider-plugin.c					\
	lunarx-renamer.c						\
	lunarx-renamer-provider.c

liblunarx_3_la_CFLAGS =						\
	$(GLIB_CFLAGS)							\
	$(GIO_CFLAGS)							\
	$(GTK_CFLAGS)							\
	$(GMODULE_CFLAGS)						\
	$(PLATFORM_CFLAGS)

liblunarx_3_la_LDFLAGS =						\
	-export-dynamic							\
	-export-symbols-regex "^[^_].*"					\
	-no-undefined							\
	-version-info $(LUNARX_VERINFO)				\
	$(PLATFORM_LDFLAGS)

liblunarx_3_la_LIBADD =						\
	$(GLIB_LIBS)							\
	$(GMODULE_LIBS)							\
	$(GIO_LIBS)							\
	$(GTK_LIBS)

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = lunarx-3.pc

EXTRA_DIST =								\
	abicheck.sh							\
	lunarx.symbols

CLEANFILES = $(NULL)

##
## Rules to auto-generate built sources
##
## This is a bit tricky with automake, and non-trivial to implement. The
## rules below seem to work fine and don't seem to break the build, but
## they are only enabled in maintainer mode, so arbitrary users don't get
## trapped in automake's oddities. Therefore we ship the autogenerated
## files as part of the dist tarball.
##
if MAINTAINER_MODE
CLEANFILES +=								\
	actual-abi							\
	expected-abi

TESTS =									\
	abicheck.sh

endif

# required for gtk-doc
dist-hook: all

-include $(INTROSPECTION_MAKEFILE)
#AM_DEFAULT_VERBOSITY = 1

INTROSPECTION_GIRS =
INTROSPECTION_SCANNER_ARGS = \
	--add-include-path=$(srcdir) \
	--add-include-path=$(prefix)/share/gir-1.0 \
	-I$(srcdir)/.. \
	--warn-all \
	-DLUNARX_COMPILATION
INTROSPECTION_COMPILER_ARGS = \
	--includedir=$(srcdir) \
	--includedir=$(prefix)/share/gir-1.0 \
	--includedir=.

if HAVE_INTROSPECTION
Lunarx-3.0.gir: liblunarx-3.la
Lunarx_3_0_gir_INCLUDES = GObject-2.0 Gtk-3.0
Lunarx_3_0_gir_CFLAGS = $(INCLUDES)
Lunarx_3_0_gir_LIBS = liblunarx-3.la
Lunarx_3_0_gir_FILES = $(liblunarx_3_la_SOURCES)
INTROSPECTION_GIRS += Lunarx-3.0.gir

girdir = $(datadir)/gir-1.0/
gir_DATA = $(INTROSPECTION_GIRS)

typelibdir = $(libdir)/girepository-1.0/
typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)

CLEANFILES += $(gir_DATA) $(typelib_DATA)

endif

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
