if LUNAR_PLUGIN_APR
LUNAR_APR_SUBDIRS = lunar-apr
endif

if LUNAR_PLUGIN_SBR
LUNAR_SBR_SUBDIRS = lunar-sbr
endif

if LUNAR_PLUGIN_TPA
LUNAR_TPA_SUBDIRS = lunar-tpa
endif

if LUNAR_PLUGIN_UCA
LUNAR_UCA_SUBDIRS = lunar-uca
endif

if LUNAR_PLUGIN_WALLPAPER
LUNAR_WALLPAPER_SUBDIRS = lunar-wallpaper
endif

SUBDIRS =								\
	$(LUNAR_APR_SUBDIRS)						\
	$(LUNAR_SBR_SUBDIRS)						\
	$(LUNAR_TPA_SUBDIRS)						\
	$(LUNAR_UCA_SUBDIRS)						\
	$(LUNAR_WALLPAPER_SUBDIRS)					\
	lunar-sendto-email

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
